--- a/multi_scale_yolov11_train.ipynb
+++ b/multi_scale_yolov11_train.ipynb
@@ -31,6 +31,7 @@
     "import random\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.patches as patches\n",
+    "from sklearn.model_selection import train_test_split\n",
     "device=torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(\"device:\",device)"
    ]
@@ -62,8 +63,7 @@
     "with open('utils/args.yaml', errors='ignore') as f:\n",
     "    params = yaml.safe_load(f) \n",
     "input_size = 512\n",
-    "label_dir = '../../data/IGNITE/annotations/pdl1/individual/'\n",
-    "image_dir = '../../data/IGNITE/images/pdl1/pdl1/'\n",
+    "label_dir = '../../data/her2_cell_level_dataset/labels/'\n",
     "\n",
     "label_files = sorted(glob.glob(os.path.join(label_dir, '*.json')))\n",
     "filenames = []\n",
@@ -71,13 +71,13 @@
     "for label_file in label_files:\n",
     "    with open(label_file) as f:\n",
     "        data1 = json.load(f)\n",
-    "    img_path = os.path.join(image_dir, data1['image']['file_name'])\n",
+    "    img_path = label_file.replace('labels', 'images').replace('.json', '.png')\n",
     "    if os.path.exists(img_path):\n",
     "        filenames.append(img_path)\n",
     "        temp_labels = []\n",
-    "        for i in range(len(data1['annotations'])):\n",
-    "            temp_labels.append([data1['annotations'][i]['category_id'],int(data1['annotations'][i]['bbox'][0]),\n",
-    "                         int(data1['annotations'][i]['bbox'][1]),int(data1['annotations'][i]['bbox'][2]),int(data1['annotations'][i]['bbox'][3])])\n",
+    "        for i in range(len(data1)):\n",
+    "            temp_labels.append([data1[i]['cls_id'],int(data1[i]['x']),\n",
+    "                         int(data1[i]['y']),32,32])\n",
     "        origin_labels.append(temp_labels)\n",
     "\n",
     "# 이미지 메모리 로드\n",
@@ -86,40 +86,16 @@
     "labels=[]\n",
     "\n",
     "for i in tqdm(range(len(filenames))):\n",
-    "    image = cv2.imread(filenames[i])\n",
+    "    image = cv2.resize(cv2.imread(filenames[i]), (input_size, input_size))\n",
     "    image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)  # BGR -> RGB 변환\n",
-    "    h, w = image.shape[:2]\n",
-    "    r = input_size / min(h, w)\n",
-    "    if r < 1:\n",
-    "        h_count=h//input_size\n",
-    "        w_count=w//input_size\n",
-    "        for hi in range(h_count):\n",
-    "            for wi in range(w_count):\n",
-    "                h1 = hi*input_size\n",
-    "                w1 = wi*input_size\n",
-    "                if h1+input_size>h:\n",
-    "                    h1=h-input_size\n",
-    "                if w1+input_size>w:\n",
-    "                    w1=w-input_size\n",
-    "                crop_image = image[h1:h1+input_size, w1:w1+input_size, :]\n",
-    "                crop_labels=crop_image_and_label(h1,w1,origin_labels[i],input_size)\n",
-    "                if len(crop_labels)==0:\n",
-    "                    continue   \n",
-    "                labels.append(crop_labels)\n",
-    "                images.append(crop_image)\n",
-    "    else:\n",
-    "        # 이미지가 input_size보다 작거나 같은 경우 (r >= 1) -> 패딩\n",
-    "        h1 = 0\n",
-    "        w1 = 0\n",
-    "        pad_image = np.ones((input_size, input_size, 3), dtype=np.uint8)*255\n",
-    "        pad_image[:min(h,input_size), :min(w,input_size), :] = image[:min(h,input_size), :min(w,input_size), :]\n",
-    "        image = pad_image\n",
-    "        crop_labels=crop_image_and_label(h1,w1,origin_labels[i],input_size)\n",
-    "        \n",
-    "        if len(crop_labels)==0:\n",
-    "            continue \n",
-    "        labels.append(crop_labels)\n",
-    "        images.append(image)\n"
+    "    temp_labels = []\n",
+    "    for j in range((len(origin_labels[i]))):\n",
+    "        temp_labels.append([origin_labels[i][j][0],origin_labels[i][j][1]/image.shape[0],\n",
+    "                         origin_labels[i][j][2]/image.shape[1],origin_labels[i][j][3]/image.shape[0],\n",
+    "                         origin_labels[i][j][4]/image.shape[1]])\n",
+    "    labels.append(temp_labels)\n",
+    "\n",
+    "    images.append(image)\n"
    ]
   },
   {
@@ -152,7 +128,7 @@
     "        self.augment = augment\n",
     "        self.images = images\n",
     "        self.labels = labels\n",
-    "        self.scale_list = [192, 224, 256, 288, 320, 352, 384, 416, 448, 480, 512]\n",
+    "        self.scale_list = [256, 288, 320, 352, 384, 416, 448, 480, 512]\n",
     "        self.current_scale = 512  # 배치 단위로 관리될 현재 스케일\n",
     "        self.n = len(self.images)\n",
     "        self.indices = range(self.n)\n",
@@ -185,7 +161,7 @@
     "        for i in range(len(label)):\n",
     "            cls.append(label[i][0])\n",
     "            box.append(label[i][1:5])\n",
-    "        cls=np.array(cls)-1 # class index 0부터 시작하도록 변경\n",
+    "        cls=np.array(cls) # class index 0부터 시작하도록 변경\n",
     "        box=np.array(box)\n",
     "        nl = len(box)\n",
     "        if self.augment:\n",
@@ -207,8 +183,16 @@
     "    \n",
     "\n",
     "split=[0.9, 0.1]\n",
-    "train_dataset=custom_dataset(images[:int(len(images)*split[0])], params, augment=True, labels=labels[:int(len(images)*split[0])])\n",
-    "val_dataset = custom_dataset(images[int(len(images)*split[0]):], params, augment=False, labels=labels[int(len(images)*split[0]):])"
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    images, labels, \n",
+    "    test_size=0.2,        # 테스트 비율\n",
+    "    random_state=42,       \n",
+    "    shuffle=True          # 셔플 여부\n",
+    ")\n",
+    "\n",
+    "# 3-way split도 가능\n",
+    "train_dataset=custom_dataset(X_train, params, augment=True, labels=y_train)\n",
+    "val_dataset = custom_dataset(X_test, params, augment=False, labels=y_test)"
    ]
   },
   {
@@ -239,8 +223,8 @@
     "    height, width = image.shape[:2]\n",
     "    \n",
     "    # 클래스 이름 및 색상 설정\n",
-    "    class_names = {0: 'PD-L1 negative', 1: 'PD-L1 positive', 2: 'non-tumor cell'}\n",
-    "    colors = ['red', 'blue', 'green']  # negative: red, positive: blue, non-tumor: green\n",
+    "    class_names = {0: 'class_0', 1: 'class_1', 2: 'class_2',3: 'class_3'}\n",
+    "    colors = ['green','yellow','blue','red']  # negative: red, positive: blue, non-tumor: green\n",
     "\n",
     "    # 시각화\n",
     "    fig, ax = plt.subplots(1, 1, figsize=(4, 4))\n",
@@ -301,7 +285,7 @@
     "# train_dataset[0] 시각화 실행\n",
     "print(\"🖼️ Train Dataset 첫 번째 샘플 시각화\")\n",
     "print(\"=\" * 50)\n",
-    "visualize_sample_with_overlay(train_dataset, index=3)"
+    "visualize_sample_with_overlay(train_dataset, index=700)"
    ]
   },
   {
@@ -384,7 +368,7 @@
     "epochs = 10000\n",
     "scale_list = [256, 288, 320, 352, 384, 416, 448, 480, 512]\n",
     "# 체크포인트 저장을 위한 디렉토리 생성\n",
-    "save_dir = '../../model/yolov11/'\n",
+    "save_dir = '../../model/her2_cell_level_yolov11_multi_scale/'\n",
     "os.makedirs(save_dir, exist_ok=True)\n",
     "#체크포인트 불러오기 \n",
     "# checkpoint_path = os.path.join(save_dir, 'best_model.pt')\n",
@@ -421,19 +405,19 @@
     "        collate_fn=collate_fn1,\n",
     "        drop_last=True\n",
     "    )\n",
-    "    for i, (images, targets) in train_pbar:\n",
+    "    for i, (torch_images, targets) in train_pbar:\n",
     "        step = i + len(loader) * epoch\n",
-    "        images = images.to(device).float() / 255\n",
+    "        torch_images = torch_images.to(device).float() / 255\n",
     "        \n",
     "        # Forward pass with mixed precision\n",
     "        with torch.amp.autocast('cuda'):\n",
-    "            outputs = model(images)\n",
+    "            outputs = model(torch_images)\n",
     "            loss_box, loss_cls, loss_dfl = criterion(outputs, targets)\n",
     "        \n",
     "        # 평균 손실 업데이트\n",
-    "        avg_box_loss.update(loss_box.item(), images.size(0))\n",
-    "        avg_cls_loss.update(loss_cls.item(), images.size(0))\n",
-    "        avg_dfl_loss.update(loss_dfl.item(), images.size(0))\n",
+    "        avg_box_loss.update(loss_box.item(), torch_images.size(0))\n",
+    "        avg_cls_loss.update(loss_cls.item(), torch_images.size(0))\n",
+    "        avg_dfl_loss.update(loss_dfl.item(), torch_images.size(0))\n",
     "        \n",
     "        # Loss scaling for gradient accumulation\n",
     "        loss_box *= batch_size  # loss scaled by batch_size\n",
