Add WSI cell detection model and XML export functionality
- Implemented YOLOv11 model for HER2 cell detection.
- Added functions for non-maximum suppression and patch prediction.
- Created ASAP XML format export for detected tumor cells.
- Integrated image processing using OpenSlide and PyVips for handling WSI files.
- Enhanced performance with batch processing and vectorized operations.
- Included device management for CUDA support.

--- a/wsi_prediction.ipynb
+++ b/wsi_prediction.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0b39ece3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "device: cuda:0\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "import os\n",
@@ -45,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b649b328",
    "metadata": {},
    "outputs": [],
@@ -195,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "2eb2b41c",
    "metadata": {},
    "outputs": [],
@@ -339,13 +347,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "e2021d19",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 209/209 [04:42<00:00,  1.35s/it]\n",
+      "100%|██████████| 111/111 [03:50<00:00,  2.08s/it]\n",
+      "100%|██████████| 224/224 [02:03<00:00,  1.81it/s]\n",
+      "100%|██████████| 216/216 [02:10<00:00,  1.65it/s]\n",
+      "100%|██████████| 246/246 [02:44<00:00,  1.50it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "import pyvips\n",
-    "slide_path=glob('../../data/WSI_test/CODIPAI-STER-SS-00168-I-HR-01.ndpi')\n",
+    "slide_path=glob('../../data/WSI_test/*.ndpi')\n",
     "image_size=512 # 모델 입력 크기\n",
     "origin_mpp=0.25\n",
     "output_mpp=0.5\n",
@@ -419,10 +439,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "9f0395ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(512, 512, 4)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "patch.shape"
    ]
