--- a/wsi_prediction.ipynb
+++ b/wsi_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "0b39ece3",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "b649b328",
    "metadata": {},
    "outputs": [],
@@ -145,10 +145,10 @@
     "    \n",
     "    # 클래스별 개별 confidence threshold 설정\n",
     "    class_thresholds = {\n",
-    "        0: 0.5,  # Her2 class0 cell\n",
-    "        1: 0.5,  # Her2 class1 cell\n",
-    "        2: 0.5,  # Her2 class2 cell\n",
-    "        3: 0.5   # Her2 class3 cell\n",
+    "        0: 0.3,  # Her2 class0 cell\n",
+    "        1: 0.3,  # Her2 class1 cell\n",
+    "        2: 0.3,  # Her2 class2 cell\n",
+    "        3: 0.3   # Her2 class3 cell\n",
     "    }\n",
     "    \n",
     "    class_0_tumor = []\n",
@@ -161,7 +161,7 @@
     "            pred = model(torch_patch)\n",
     "        \n",
     "        # 빠른 NMS 적용\n",
-    "        results = non_max_suppression(pred, confidence_threshold=0.5, \n",
+    "        results = non_max_suppression(pred, confidence_threshold=0.3, \n",
     "                                    iou_threshold=0.1, class_thresholds=class_thresholds)\n",
     "        \n",
     "        if len(results[0]) > 0:\n",
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "2eb2b41c",
    "metadata": {},
    "outputs": [],
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "e2021d19",
    "metadata": {},
    "outputs": [
@@ -355,11 +355,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 209/209 [04:42<00:00,  1.35s/it]\n",
-      "100%|██████████| 111/111 [03:50<00:00,  2.08s/it]\n",
-      "100%|██████████| 224/224 [02:03<00:00,  1.81it/s]\n",
-      "100%|██████████| 216/216 [02:10<00:00,  1.65it/s]\n",
-      "100%|██████████| 246/246 [02:44<00:00,  1.50it/s]\n"
+      "  0%|          | 0/209 [00:00<?, ?it/s]/usr/local/lib/python3.12/dist-packages/torch/functional.py:539: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at /opt/pytorch/pytorch/aten/src/ATen/native/TensorShape.cpp:3611.)\n",
+      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n",
+      "100%|██████████| 209/209 [04:39<00:00,  1.34s/it]\n",
+      "100%|██████████| 111/111 [04:01<00:00,  2.18s/it]\n",
+      "100%|██████████| 224/224 [01:58<00:00,  1.89it/s]\n",
+      "100%|██████████| 216/216 [02:16<00:00,  1.58it/s]\n",
+      "100%|██████████| 246/246 [02:45<00:00,  1.49it/s]\n"
      ]
     }
    ],
@@ -439,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "9f0395ed",
    "metadata": {},
    "outputs": [
@@ -449,7 +451,7 @@
        "(512, 512, 4)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
