Fix cropping condition in multi_scale_yolov11_train.ipynb and update slide path in wsi_prediction.ipynb
- Adjusted the cropping condition to remove unnecessary offsets in multi_scale_yolov11_train.ipynb for better label accuracy.
- Changed the slide path in wsi_prediction.ipynb to point to the correct dataset directory and updated output logs to reflect the new processing times and dimensions.

--- a/wsi_prediction.ipynb
+++ b/wsi_prediction.ipynb
@@ -355,19 +355,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/209 [00:00<?, ?it/s]/usr/local/lib/python3.12/dist-packages/torch/functional.py:539: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at /opt/pytorch/pytorch/aten/src/ATen/native/TensorShape.cpp:3611.)\n",
+      "  0%|          | 0/216 [00:00<?, ?it/s]/usr/local/lib/python3.12/dist-packages/torch/functional.py:539: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at /opt/pytorch/pytorch/aten/src/ATen/native/TensorShape.cpp:3611.)\n",
       "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n",
-      "100%|██████████| 209/209 [04:39<00:00,  1.34s/it]\n",
-      "100%|██████████| 111/111 [04:01<00:00,  2.18s/it]\n",
-      "100%|██████████| 224/224 [01:58<00:00,  1.89it/s]\n",
-      "100%|██████████| 216/216 [02:16<00:00,  1.58it/s]\n",
-      "100%|██████████| 246/246 [02:45<00:00,  1.49it/s]\n"
+      "100%|██████████| 216/216 [08:19<00:00,  2.31s/it]\n",
+      "100%|██████████| 231/231 [07:42<00:00,  2.00s/it]\n",
+      "100%|██████████| 276/276 [03:54<00:00,  1.18it/s]\n",
+      "100%|██████████| 201/201 [08:09<00:00,  2.44s/it]\n",
+      "100%|██████████| 276/276 [09:05<00:00,  1.98s/it]\n"
      ]
     }
    ],
    "source": [
     "import pyvips\n",
-    "slide_path=glob('../../data/WSI_test/*.ndpi')\n",
+    "slide_path=glob('../../data/BR_her2/*.tiff')\n",
     "image_size=512 # 모델 입력 크기\n",
     "origin_mpp=0.25\n",
     "output_mpp=0.5\n",
@@ -448,7 +448,7 @@
     {
      "data": {
       "text/plain": [
-       "(512, 512, 4)"
+       "(512, 512, 3)"
       ]
      },
      "execution_count": 5,
