--- a/multi_scale_yolov11_train.ipynb
+++ b/multi_scale_yolov11_train.ipynb
@@ -371,7 +371,7 @@
     "save_dir = '../../model/her2_cell_level_yolov11_multi_scale/'\n",
     "os.makedirs(save_dir, exist_ok=True)\n",
     "#체크포인트 불러오기 \n",
-    "# checkpoint_path = os.path.join(save_dir, 'best_model.pt')\n",
+    "# checkpoint_path = os.path.join(save_dir, 'best_model_1.pt')\n",
     "# if os.path.exists(checkpoint_path):\n",
     "#     checkpoint = torch.load(checkpoint_path, map_location=device,weights_only=False)\n",
     "#     model.load_state_dict(checkpoint['model_state_dict'])\n",
