origin_size 변수를 추가하고 이미지 크기 비율 계산을 수정하여 라벨링 정확도 향상

--- a/multi_scale_yolov11_train.ipynb
+++ b/multi_scale_yolov11_train.ipynb
@@ -64,7 +64,7 @@
     "    params = yaml.safe_load(f) \n",
     "input_size = 512\n",
     "label_dir = '../../data/her2_cell_level_dataset/labels/'\n",
-    "\n",
+    "origin_size=1024\n",
     "label_files = sorted(glob.glob(os.path.join(label_dir, '*.json')))\n",
     "filenames = []\n",
     "origin_labels = []\n",
@@ -90,9 +90,9 @@
     "    image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)  # BGR -> RGB 변환\n",
     "    temp_labels = []\n",
     "    for j in range((len(origin_labels[i]))):\n",
-    "        temp_labels.append([origin_labels[i][j][0],origin_labels[i][j][1]/image.shape[0],\n",
-    "                         origin_labels[i][j][2]/image.shape[1],origin_labels[i][j][3]/image.shape[0],\n",
-    "                         origin_labels[i][j][4]/image.shape[1]])\n",
+    "        temp_labels.append([origin_labels[i][j][0],origin_labels[i][j][1]/origin_size,\n",
+    "                         origin_labels[i][j][2]/origin_size,origin_labels[i][j][3]/origin_size,\n",
+    "                         origin_labels[i][j][4]/origin_size])\n",
     "    labels.append(temp_labels)\n",
     "\n",
     "    images.append(image)\n"
@@ -218,7 +218,7 @@
     "    image = image_tensor.numpy().transpose(1, 2, 0)\n",
     "    cls = cls_tensor.numpy()\n",
     "    boxes = box_tensor.numpy()\n",
-    "    \n",
+    "\n",
     "    # 이미지 크기\n",
     "    height, width = image.shape[:2]\n",
     "    \n",
@@ -285,7 +285,7 @@
     "# train_dataset[0] 시각화 실행\n",
     "print(\"🖼️ Train Dataset 첫 번째 샘플 시각화\")\n",
     "print(\"=\" * 50)\n",
-    "visualize_sample_with_overlay(train_dataset, index=700)"
+    "visualize_sample_with_overlay(train_dataset, index=200)"
    ]
   },
   {
