세포 검출 결과의 조건을 수정하고 이미지 로딩 방식을 개선하여 시각화 정확도 향상

--- a/validation_patch_creation.ipynb
+++ b/validation_patch_creation.ipynb
@@ -390,7 +390,9 @@
     "                torch_patch=torch.from_numpy(np.array(patch)).permute(2,0,1).unsqueeze(0).float()/255.\n",
     "                torch_patch=torch_patch.to(device)\n",
     "                temp_class_0_tumor, temp_class_1_tumor, temp_class_2_tumor, temp_class_3_tumor = pred_patch(torch_patch, model, 1)\n",
-    "                if len(temp_class_0_tumor)!=0 or len(temp_class_1_tumor)!=0 or len(temp_class_2_tumor)!=0 or len(temp_class_3_tumor)!=0:\n",
+    "                total_cells = (len(temp_class_0_tumor) + len(temp_class_1_tumor) + \n",
+    "                               len(temp_class_2_tumor) + len(temp_class_3_tumor))\n",
+    "                if total_cells > 20 and total_cells < 200:\n",
     "                    cv2.imwrite(image_path+file_name+'_'+str(patch_row)+'_'+str(patch_col)+'.png',cv2.cvtColor(patch, cv2.COLOR_RGB2BGR) )\n",
     "                    create_asap_xml(temp_class_0_tumor, temp_class_1_tumor, temp_class_2_tumor, temp_class_3_tumor, label_path+file_name+'_'+str(patch_row)+'_'+str(patch_col)+'.xml')\n"
    ]
@@ -452,7 +454,7 @@
     "    # 이미지 로드\n",
     "    if os.path.exists(image_path):\n",
     "        image = cv2.imread(image_path)\n",
-    "        image_rgb = image\n",
+    "        image_rgb = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
     "        print(f\"이미지 로딩 완료: {os.path.basename(image_path)}\")\n",
     "        print(f\"이미지 크기: {image_rgb.shape}\")\n",
     "    else:\n",
@@ -535,8 +537,8 @@
     "\n",
     "# 실행\n",
     "print(\"=== Her2 세포 검출 결과 시각화 ===\")\n",
-    "patch_path = '../../data/validation_patch_her2/images/BRCA-00259-I-HR-01_10_36.png'  # 예시 패치 이미지 경로\n",
-    "label_path = '../../data/validation_patch_her2/labels/BRCA-00259-I-HR-01_10_36.xml'  # 예시 XML 라벨 경로\n",
+    "patch_path = '../../data/validation_patch_her2/images/BRCA-00259-I-HR-01_12_19.png'  # 예시 패치 이미지 경로\n",
+    "label_path = '../../data/validation_patch_her2/labels/BRCA-00259-I-HR-01_12_19.xml'  # 예시 XML 라벨 경로\n",
     "annotations, total_count = visualize_patch_with_detections(patch_path, label_path)\n"
    ]
   },
