파일 경로를 수정하고 이미지 처리 로직을 개선하여 세포 검출 성능 향상

--- a/validation_patch_creation.ipynb
+++ b/validation_patch_creation.ipynb
@@ -350,7 +350,7 @@
     "create_directory(image_path,exist_ok=True)\n",
     "create_directory(label_path,exist_ok=True)\n",
     "\n",
-    "slide_path=glob('../../data/BR_her2/*.tiff')\n",
+    "slide_path=glob('../../data/BR_her2/*.ndpi')\n",
     "image_size=512 # 모델 입력 크기\n",
     "origin_mpp=0.25\n",
     "output_mpp=0.5\n",
@@ -367,7 +367,10 @@
     "    thumb_mask=cv2.threshold(255-np.array(thumbnail.convert('L')),30,255,cv2.THRESH_BINARY)[1]\n",
     "    thumb_mask=cv2.morphologyEx(thumb_mask,cv2.MORPH_CLOSE,np.ones((15,15),np.uint8))\n",
     "    thumb_mask=cv2.morphologyEx(thumb_mask,cv2.MORPH_OPEN,np.ones((5,5),np.uint8))\n",
-    "    \n",
+    "    thumb_mask[:,:200]=0\n",
+    "    thumb_mask[:200,:]=0\n",
+    "    thumb_mask[-200:,:]=0\n",
+    "    thumb_mask[:,-200:]=0\n",
     "    # 방법 1: 미리 계산된 패치 수로 사전 할당\n",
     "    total_patches = (slide.width//original_size-1) * (slide.height//original_size-1)\n",
     "    estimated_cells_per_patch = 50  # 패치당 예상 세포 수 (조정 가능)\n",
@@ -387,7 +390,7 @@
     "                            dtype=np.uint8,\n",
     "                            shape=[patch.height, patch.width, patch.bands])\n",
     "                \n",
-    "                torch_patch=torch.from_numpy(np.array(patch)).permute(2,0,1).unsqueeze(0).float()/255.\n",
+    "                torch_patch=torch.from_numpy(np.array(patch)[:,:,:3]).permute(2,0,1).unsqueeze(0).float()/255.\n",
     "                torch_patch=torch_patch.to(device)\n",
     "                temp_class_0_tumor, temp_class_1_tumor, temp_class_2_tumor, temp_class_3_tumor = pred_patch(torch_patch, model, 1)\n",
     "                total_cells = (len(temp_class_0_tumor) + len(temp_class_1_tumor) + \n",
@@ -395,6 +398,16 @@
     "                if total_cells > 20 and total_cells < 200:\n",
     "                    cv2.imwrite(image_path+file_name+'_'+str(patch_row)+'_'+str(patch_col)+'.png',cv2.cvtColor(patch, cv2.COLOR_RGB2BGR) )\n",
     "                    create_asap_xml(temp_class_0_tumor, temp_class_1_tumor, temp_class_2_tumor, temp_class_3_tumor, label_path+file_name+'_'+str(patch_row)+'_'+str(patch_col)+'.xml')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "884185f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(glob('../../data/validation_patch_her2/images/*.png'))"
    ]
   },
   {
