코드 셀의 실행 카운트를 null로 변경하고, create_directory 함수 정의를 추가하여 코드 가독성 향상

--- a/mediauto_validation_patch_preprocessing.ipynb
+++ b/mediauto_validation_patch_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6ced6e69",
    "metadata": {},
    "outputs": [],
@@ -11,13 +11,33 @@
     "from PIL import Image\n",
     "import os\n",
     "import numpy as np\n",
-    "from glob import glob"
+    "from glob import glob\n",
+    "def create_directory(path):\n",
+    "    if not os.path.exists(path):\n",
+    "        os.makedirs(path)\n",
+    "    return path"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "c1f007db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slide_list=glob('../../data/BR_her2/*.ndpi')\n",
+    "create_directory('../../data/BR_her2_thumbnail/')\n",
+    "for slide_path in slide_list:\n",
+    "    slide=ops.OpenSlide(slide_path)\n",
+    "    thumb=slide.get_thumbnail((slide.level_dimensions[0][0]//32,slide.level_dimensions[0][1]//32))\n",
+    "    save_path=os.path.join('../../data/BR_her2_thumbnail/',os.path.basename(slide_path).replace('CODIPAI-','').replace('-SS','').replace('.ndpi','.png'))\n",
+    "    thumb.save(save_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fad89130",
    "metadata": {},
    "outputs": [],
    "source": []
