Cohen's Kappa 계산 로직 개선 및 관련 메트릭 최적화, 체크포인트 경로 수정

--- a/mediauto_validation_yolov11_train.ipynb
+++ b/mediauto_validation_yolov11_train.ipynb
@@ -89,14 +89,14 @@
     "                         int(objects[i][\"coordinate\"][0][1]),32,32])\n",
     "        origin_labels.append(temp_labels)\n",
     "# 라벨을 할수 없는 이미지\n",
-    "with open(label_dir+\"cancel_list.json\") as f:\n",
-    "    data1 = json.load(f)\n",
-    "for i in range(len(data1)):\n",
-    "    data1[i]['IMAGE']=data1[i]['IMAGE'].split('/')[-1]\n",
-    "    img_name=data1[i]['IMAGE'].replace(\"BRCA-\",\"BRCA-SS-\")# 이거 한정\n",
-    "    img_path=label_dir.replace('validations_1', 'images')+\"CODIPAI-\"+img_name\n",
-    "    origin_labels.append([])\n",
-    "    filenames.append(img_path)\n",
+    "# with open(label_dir+\"cancel_list.json\") as f:\n",
+    "#     data1 = json.load(f)\n",
+    "# for i in range(len(data1)):\n",
+    "#     data1[i]['IMAGE']=data1[i]['IMAGE'].split('/')[-1]\n",
+    "#     img_name=data1[i]['IMAGE'].replace(\"BRCA-\",\"BRCA-SS-\")# 이거 한정\n",
+    "#     img_path=label_dir.replace('validations_1', 'images')+\"CODIPAI-\"+img_name\n",
+    "#     origin_labels.append([])\n",
+    "#     filenames.append(img_path)\n",
     "# 이미지 메모리 로드\n",
     "\n",
     "images = []\n",
@@ -148,9 +148,9 @@
     "        self.scale_list = [256, 288, 320, 352, 384, 416, 448, 480, 512]\n",
     "        self.current_scale = 512  # 배치 단위로 관리될 현재 스케일\n",
     "        self.n = len(self.images)\n",
-    "        self.indices = range(self.n)\n",
+    "        self.indices = list(range(self.n))*10\n",
     "    def __len__(self):\n",
-    "        return self.n\n",
+    "        return len(self.indices)\n",
     "    def set_scale(self, scale):\n",
     "        \"\"\"배치 단위로 스케일 설정\"\"\"\n",
     "        self.current_scale = scale\n",
@@ -388,13 +388,13 @@
     "save_dir = '../../model/her2_validation_1/'\n",
     "os.makedirs(save_dir, exist_ok=True)\n",
     "#체크포인트 불러오기 \n",
-    "checkpoint_path = os.path.join(\"../../model/her2_cell_level_yolov11_multi_scale/\", 'best_model_1.pt')\n",
+    "checkpoint_path = os.path.join(save_dir, 'last_model.pt')\n",
     "if os.path.exists(checkpoint_path):\n",
     "    checkpoint = torch.load(checkpoint_path, map_location=device,weights_only=False)\n",
     "    model.load_state_dict(checkpoint['model_state_dict'])\n",
     "    \n",
     "# main.py 스타일의 설정들\n",
-    "best_map = 0\n",
+    "best_kappa = 0\n",
     "accumulate = max(round(64 / batch_size), 1)  # gradient accumulation steps\n",
     "amp_scale = torch.amp.GradScaler()  # mixed precision scaler\n",
     "\n",
@@ -487,8 +487,8 @@
     "    \n",
     "    \n",
     "    # 베스트 모델 저장 (mAP 기준)\n",
-    "    if mean_ap > best_map:\n",
-    "        best_map = mean_ap\n",
+    "    if kappa > best_kappa:\n",
+    "        best_kappa = kappa\n",
     "        save_checkpoint = {\n",
     "            'epoch': epoch,\n",
     "            'model_state_dict': model.state_dict(),\n",
@@ -507,7 +507,7 @@
     "            'params': params\n",
     "        }\n",
     "        torch.save(save_checkpoint, os.path.join(save_dir, 'best_model.pt'))\n",
-    "        print(f\"🎉 새로운 베스트 모델 저장! mAP: {mean_ap:.4f}, Kappa: {kappa:.4f}\")\n",
+    "        print(f\"🎉 새로운 베스트 모델 저장! Kappa: {kappa:.4f}\")\n",
     "    \n",
     "    # 최신 모델도 저장 (main.py 스타일)\n",
     "    last_checkpoint = {\n",
@@ -557,7 +557,7 @@
     "            print(f\"시각화 중 오류: {e}\")\n",
     "\n",
     "print(\"🎯 학습 완료!\")\n",
-    "print(f\"최종 베스트 mAP: {best_map:.4f}\")\n",
+    "print(f\"최종 베스트 Kappa: {best_kappa:.4f}\")\n",
     "print(f\"모델 저장 위치: {save_dir}\")\n",
     "print(f\"베스트 모델: {os.path.join(save_dir, 'best_model.pt')}\")\n",
     "print(f\"최신 모델: {os.path.join(save_dir, 'last_model.pt')}\")\n",
