Point-label 메트릭 추가 및 검증 루프 개선: Cohen's Kappa와 관련된 메트릭 통합, 출력 형식 수정

--- a/mediauto_validation_yolov11_train.ipynb
+++ b/mediauto_validation_yolov11_train.ipynb
@@ -371,6 +371,7 @@
    "outputs": [],
    "source": [
     "from utils.valid import compute_validation_metrics, compute_validation_metrics_with_kappa, get_kappa_interpretation\n",
+    "from utils.valid import compute_point_label_metrics  # Point-label 최적화 메트릭 추가\n",
     "from utils.valid import visualize_ground_truth_and_prediction_separately\n",
     "from utils.valid import plot_training_progress\n",
     "\n",
@@ -382,19 +383,25 @@
     "val_recalls = []\n",
     "val_map50s = []\n",
     "val_kappas = []  # Cohen's Kappa 추가\n",
+    "\n",
+    "# Point-label 메트릭용 리스트 추가\n",
+    "val_det_recalls = []  # Detection Recall\n",
+    "val_cls_accs = []     # Classification Accuracy\n",
+    "val_macro_f1s = []    # Macro F1-score\n",
+    "\n",
     "epochs = 10000\n",
     "scale_list = [256, 288, 320, 352, 384, 416, 448, 480, 512]\n",
     "# 체크포인트 저장을 위한 디렉토리 생성\n",
     "save_dir = '../../model/her2_validation_1/'\n",
     "os.makedirs(save_dir, exist_ok=True)\n",
     "#체크포인트 불러오기 \n",
-    "checkpoint_path = os.path.join(save_dir, 'last_model.pt')\n",
-    "if os.path.exists(checkpoint_path):\n",
-    "    checkpoint = torch.load(checkpoint_path, map_location=device,weights_only=False)\n",
-    "    model.load_state_dict(checkpoint['model_state_dict'])\n",
+    "# checkpoint_path = os.path.join(save_dir, 'last_model.pt')\n",
+    "# if os.path.exists(checkpoint_path):\n",
+    "#     checkpoint = torch.load(checkpoint_path, map_location=device,weights_only=False)\n",
+    "#     model.load_state_dict(checkpoint['model_state_dict'])\n",
     "    \n",
     "# main.py 스타일의 설정들\n",
-    "best_kappa = 0\n",
+    "best_macro_f1 = 0  # 베스트 모델 기준을 macro_f1로 변경\n",
     "accumulate = max(round(64 / batch_size), 1)  # gradient accumulation steps\n",
     "amp_scale = torch.amp.GradScaler()  # mixed precision scaler\n",
     "\n",
@@ -464,7 +471,9 @@
     "    avg_train_loss = avg_box_loss.avg + avg_cls_loss.avg + avg_dfl_loss.avg\n",
     "    train_losses.append(avg_train_loss)\n",
     "    val_dataset.set_scale(512)\n",
-    "    # 검증 (Cohen's Kappa 포함)\n",
+    "    \n",
+    "    # 검증 메트릭 계산 (기존 IoU 기반 + Point-label 최적화)\n",
+    "    # 1. IoU 기반 메트릭 (참고용)\n",
     "    precision, recall, map50, mean_ap, kappa = compute_validation_metrics_with_kappa(\n",
     "        model, val_loader, device, params\n",
     "    )\n",
@@ -474,21 +483,50 @@
     "    val_map50s.append(map50)\n",
     "    val_kappas.append(kappa)\n",
     "    \n",
-    "    # F1-score 계산\n",
+    "    # 2. Point-label 최적화 메트릭 (주요 평가 지표)\n",
+    "    point_metrics = compute_point_label_metrics(\n",
+    "        model, val_loader, device, params, distance_threshold=16\n",
+    "    )\n",
+    "    \n",
+    "    detection_recall = point_metrics.get('detection_recall', 0)\n",
+    "    cls_accuracy = point_metrics.get('classification_accuracy', 0)\n",
+    "    macro_precision = point_metrics.get('macro_precision', 0)\n",
+    "    macro_recall = point_metrics.get('macro_recall', 0)\n",
+    "    macro_f1 = point_metrics.get('macro_f1', 0)\n",
+    "    overall_recall = point_metrics.get('overall_recall', 0)\n",
+    "    class_stats = point_metrics.get('class_stats', {})\n",
+    "    \n",
+    "    val_det_recalls.append(detection_recall)\n",
+    "    val_cls_accs.append(cls_accuracy)\n",
+    "    val_macro_f1s.append(macro_f1)\n",
+    "    \n",
+    "    # F1-score 계산 (IoU 기반)\n",
     "    f1_score = 2 * (precision * recall) / (precision + recall) if (precision + recall) > 0 else 0\n",
     "    \n",
-    "    # 결과 출력 (Cohen's Kappa 포함)\n",
+    "    # 결과 출력\n",
     "    print(f\"\\nEpoch {epoch+1}/{epochs} Results:\")\n",
     "    print(f\"  Train Loss - Box: {avg_box_loss.avg:.4f}, Cls: {avg_cls_loss.avg:.4f}, DFL: {avg_dfl_loss.avg:.4f}, Total: {avg_train_loss:.4f}\")\n",
-    "    print(f\"  Validation - Precision: {precision:.4f}, Recall: {recall:.4f}, F1-score: {f1_score:.4f}\")\n",
+    "    print(f\"\\n📊 IoU-based Metrics (참고용):\")\n",
+    "    print(f\"  Precision: {precision:.4f}, Recall: {recall:.4f}, F1-score: {f1_score:.4f}\")\n",
     "    print(f\"  mAP@0.5: {map50:.4f}, mAP@0.5:0.95: {mean_ap:.4f}\")\n",
     "    print(f\"  Cohen's Kappa: {kappa:.4f} ({get_kappa_interpretation(kappa)})\")\n",
+    "    print(f\"\\n🎯 Point-Label Metrics (주요 지표):\")\n",
+    "    print(f\"  Detection Recall: {detection_recall:.4f} (GT 중 찾은 비율)\")\n",
+    "    print(f\"  Classification Accuracy: {cls_accuracy:.4f} (찾은 세포의 분류 정확도)\")\n",
+    "    print(f\"  Macro Precision: {macro_precision:.4f}\")\n",
+    "    print(f\"  Macro Recall: {macro_recall:.4f}\")\n",
+    "    print(f\"  Macro F1-score: {macro_f1:.4f} ⭐\")\n",
+    "    print(f\"  Overall Recall: {overall_recall:.4f}\")\n",
+    "    print(f\"\\n📋 클래스별 상세:\")\n",
+    "    for cls_name, stats in class_stats.items():\n",
+    "        print(f\"  {cls_name}: P={stats['precision']:.3f}, R={stats['recall']:.3f}, F1={stats['f1']:.3f} \"\n",
+    "              f\"(TP={stats['tp']}, FP={stats['fp']}, FN={stats['fn']}, GT={stats['gt_count']})\")\n",
     "    print(\"-\" * 80)\n",
     "    \n",
     "    \n",
-    "    # 베스트 모델 저장 (mAP 기준)\n",
-    "    if kappa > best_kappa:\n",
-    "        best_kappa = kappa\n",
+    "    # 베스트 모델 저장 (Macro F1 기준으로 변경)\n",
+    "    if macro_f1 > best_macro_f1:\n",
+    "        best_macro_f1 = macro_f1\n",
     "        save_checkpoint = {\n",
     "            'epoch': epoch,\n",
     "            'model_state_dict': model.state_dict(),\n",
@@ -498,16 +536,25 @@
     "            'box_loss': avg_box_loss.avg,\n",
     "            'cls_loss': avg_cls_loss.avg,\n",
     "            'dfl_loss': avg_dfl_loss.avg,\n",
+    "            # IoU 기반 메트릭\n",
     "            'map': mean_ap,\n",
     "            'map50': map50,\n",
     "            'precision': precision,\n",
     "            'recall': recall,\n",
     "            'f1_score': f1_score,\n",
     "            'kappa': kappa,\n",
+    "            # Point-label 메트릭\n",
+    "            'detection_recall': detection_recall,\n",
+    "            'classification_accuracy': cls_accuracy,\n",
+    "            'macro_precision': macro_precision,\n",
+    "            'macro_recall': macro_recall,\n",
+    "            'macro_f1': macro_f1,\n",
+    "            'overall_recall': overall_recall,\n",
+    "            'class_stats': class_stats,\n",
     "            'params': params\n",
     "        }\n",
     "        torch.save(save_checkpoint, os.path.join(save_dir, 'best_model.pt'))\n",
-    "        print(f\"🎉 새로운 베스트 모델 저장! Kappa: {kappa:.4f}\")\n",
+    "        print(f\"🎉 새로운 베스트 모델 저장! Macro F1: {macro_f1:.4f}\")\n",
     "    \n",
     "    # 최신 모델도 저장 (main.py 스타일)\n",
     "    last_checkpoint = {\n",
@@ -519,21 +566,33 @@
     "        'box_loss': avg_box_loss.avg,\n",
     "        'cls_loss': avg_cls_loss.avg,\n",
     "        'dfl_loss': avg_dfl_loss.avg,\n",
+    "        # IoU 기반 메트릭\n",
     "        'map': mean_ap,\n",
     "        'map50': map50,\n",
     "        'precision': precision,\n",
     "        'recall': recall,\n",
     "        'f1_score': f1_score,\n",
     "        'kappa': kappa,\n",
+    "        # Point-label 메트릭\n",
+    "        'detection_recall': detection_recall,\n",
+    "        'classification_accuracy': cls_accuracy,\n",
+    "        'macro_precision': macro_precision,\n",
+    "        'macro_recall': macro_recall,\n",
+    "        'macro_f1': macro_f1,\n",
+    "        'overall_recall': overall_recall,\n",
+    "        'class_stats': class_stats,\n",
     "        'params': params\n",
     "    }\n",
     "    torch.save(last_checkpoint, os.path.join(save_dir, 'last_model.pt'))\n",
     "    \n",
-    "    # 100 에폭마다 학습 진행 그래프 생성 및 저장\n",
+    "    # 100 에폭마다 학습 진행 그래프 생성 및 저장 (Point-label 메트릭 포함)\n",
     "    if (epoch + 1) % 100 == 0:\n",
     "        try:\n",
     "            print(f\"\\n📊 Epoch {epoch+1} - 학습 진행 상황 그래프 생성 중...\")\n",
-    "            plot_training_progress(train_losses, val_maps, val_precisions, val_recalls, val_map50s, epoch+1, save_dir)\n",
+    "            plot_training_progress(\n",
+    "                train_losses, val_maps, val_precisions, val_recalls, val_map50s, epoch+1, save_dir,\n",
+    "                val_det_recalls, val_cls_accs, val_macro_f1s  # Point-label 메트릭 추가\n",
+    "            )\n",
     "        except Exception as e:\n",
     "            print(f\"그래프 생성 중 오류: {e}\")\n",
     "    \n",
@@ -557,25 +616,27 @@
     "            print(f\"시각화 중 오류: {e}\")\n",
     "\n",
     "print(\"🎯 학습 완료!\")\n",
-    "print(f\"최종 베스트 Kappa: {best_kappa:.4f}\")\n",
+    "print(f\"최종 베스트 Macro F1: {best_macro_f1:.4f}\")\n",
     "print(f\"모델 저장 위치: {save_dir}\")\n",
     "print(f\"베스트 모델: {os.path.join(save_dir, 'best_model.pt')}\")\n",
     "print(f\"최신 모델: {os.path.join(save_dir, 'last_model.pt')}\")\n",
     "\n",
     "# 최종 성능 요약\n",
-    "if val_kappas:\n",
-    "    final_kappa = val_kappas[-1]\n",
+    "if val_macro_f1s:\n",
+    "    final_macro_f1 = val_macro_f1s[-1]\n",
+    "    final_det_recall = val_det_recalls[-1]\n",
+    "    final_cls_acc = val_cls_accs[-1]\n",
     "    final_map = val_maps[-1]\n",
-    "    final_precision = val_precisions[-1]\n",
-    "    final_recall = val_recalls[-1]\n",
-    "    final_f1 = 2 * (final_precision * final_recall) / (final_precision + final_recall) if (final_precision + final_recall) > 0 else 0\n",
+    "    final_kappa = val_kappas[-1]\n",
     "    \n",
     "    print(f\"\\n📊 최종 성능 요약:\")\n",
+    "    print(f\"  [Point-Label Metrics - 주요 지표]\")\n",
+    "    print(f\"  Macro F1-score: {final_macro_f1:.4f} ⭐\")\n",
+    "    print(f\"  Detection Recall: {final_det_recall:.4f}\")\n",
+    "    print(f\"  Classification Accuracy: {final_cls_acc:.4f}\")\n",
+    "    print(f\"\\n  [IoU-based Metrics - 참고용]\")\n",
     "    print(f\"  mAP@0.5:0.95: {final_map:.4f}\")\n",
-    "    print(f\"  Cohen's Kappa: {final_kappa:.4f} ({get_kappa_interpretation(final_kappa)})\")\n",
-    "    print(f\"  F1-score: {final_f1:.4f}\")\n",
-    "    print(f\"  Precision: {final_precision:.4f}\")\n",
-    "    print(f\"  Recall: {final_recall:.4f}\")"
+    "    print(f\"  Cohen's Kappa: {final_kappa:.4f} ({get_kappa_interpretation(final_kappa)})\")\n"
    ]
   },
   {
