학습 데이터 경로 및 체크포인트 디렉토리 수정: validations_1에서 validations_2로 변경

--- a/mediauto_validation_yolov11_train.ipynb
+++ b/mediauto_validation_yolov11_train.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7f827039",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "device: cuda:0\n"
+     ]
+    }
+   ],
    "source": [
     "import copy\n",
     "import csv\n",
@@ -41,7 +49,15 @@
    "execution_count": null,
    "id": "e76e71dd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 47%|████▋     | 226/480 [00:08<00:08, 28.95it/s]"
+     ]
+    }
+   ],
    "source": [
     "def crop_image_and_label(crop_h,crop_w,label,input_size):\n",
     "    temp_labels = []\n",
@@ -69,7 +85,7 @@
     "with open('utils/args.yaml', errors='ignore') as f:\n",
     "    params = yaml.safe_load(f) \n",
     "input_size = 512\n",
-    "label_dir = '../../data/validation_patch_her2/validations_1/'\n",
+    "label_dir = '../../data/validation_patch_her2/validations_2/'\n",
     "origin_size=1024\n",
     "label_files = sorted(glob.glob(os.path.join(label_dir, 'annotation*.json')))\n",
     "filenames = []\n",
@@ -79,7 +95,7 @@
     "    with open(label_file) as f:\n",
     "        data1 = json.load(f)\n",
     "    img_name=data1[\"filename\"].replace(\"BRCA-\",\"BRCA-SS-\")# 이거 한정\n",
-    "    img_path = label_dir.replace('validations_1', 'images')+\"CODIPAI-\"+img_name\n",
+    "    img_path = label_dir.replace('validations_2', 'images')+\"CODIPAI-\"+img_name\n",
     "    if os.path.exists(img_path):\n",
     "        filenames.append(img_path)\n",
     "        temp_labels = []\n",
@@ -392,7 +408,7 @@
     "# scale_list = [256, 288, 320, 352, 384, 416, 448, 480, 512]\n",
     "scale_list = [512]\n",
     "# 체크포인트 저장을 위한 디렉토리 생성\n",
-    "save_dir = '../../model/her2_validation_1/'\n",
+    "save_dir = '../../model/her2_validation_2/'\n",
     "os.makedirs(save_dir, exist_ok=True)\n",
     "#체크포인트 불러오기 \n",
     "# checkpoint_path = os.path.join(save_dir, 'last_model.pt')\n",
